--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,6 @@
-// {
-//   "compilerOptions": {
-//     "target": "es6",
-//     "lib": [
-//       "dom",
-//       "dom.iterable",
-//       "esnext"
-//     ],
-//     "allowJs": true,
-//     "skipLibCheck": true,
-//     "esModuleInterop": true,
-//     "allowSyntheticDefaultImports": true,
-//     "strict": true,
-//     "forceConsistentCasingInFileNames": true,
-//     "noFallthroughCasesInSwitch": true,
-//     "module": "esnext",
-//     "moduleResolution": "node",
-//     "resolveJsonModule": true,
-//     "isolatedModules": true,
-//     "noEmit": true,
-//     "jsx": "react-jsx"
-//   },
-//   "include": [
-//     "src"
-//   ]
-// }
 {
   "compilerOptions": {
-    "target": "ES2020", // Поддержка современных операторов
+    "target": "ES2020",
     "module": "commonjs",
     "jsx": "react-jsx",
     "strict": true,
